Se quito lumx notifications

--- a/client/app/index.html
+++ b/client/app/index.html
@@ -59,6 +59,7 @@
         <script src="scripts/services/authinterceptor.js"></script>
         <script src="scripts/services/authtokenfactory.js"></script>
         <script src="scripts/services/messages.js"></script>
+        <script src="scripts/services/toastMD.js"></script>
         <script src="scripts/controllers/login.js"></script>
         <script src="scripts/controllers/app.js"></script>
         <script src="scripts/controllers/blocks/sidenav.js"></script>
