Se agrego vista home

--- a/client/app/index.html
+++ b/client/app/index.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="public/css/vendors.css" />
     <link rel="stylesheet" href="styles/loadingbar.css">
     <link rel="stylesheet" href="styles/bootstrap-buttons.css">
+    <link rel="stylesheet" href="styles/home-material.css">
     <link rel="stylesheet" href="styles/app.css">
     <!-- endbower -->
     <!-- endbuild -->
@@ -49,6 +50,7 @@
 
         <!-- build:js({.tmp,app}) scripts/scripts.js -->
         <script src="scripts/vendors/angular-loading-bar/build/loading-bar.js"></script>
+        <script src="scripts/vendors/home-material.js"></script>
         <script src="bower_components/moment/locale/es.js"></script>
         <script src="scripts/app.js"></script>
         <script src="scripts/directives/navscroll.js"></script>
