Asignacion de aulas

--- a/client/app/index.html
+++ b/client/app/index.html
@@ -71,6 +71,7 @@
         <script src="scripts/controllers/pabellones.js"></script>
         <script src="scripts/controllers/aulas.js"></script>
         <script src="scripts/controllers/docentes.js"></script>
+        <script src="scripts/controllers/asignaraulas.js"></script>
         <!-- endbuild -->
 </body>
 </html>
