Se implemento plan de estudios

--- a/client/app/index.html
+++ b/client/app/index.html
@@ -70,6 +70,7 @@
         <script src="scripts/controllers/escuelas.js"></script>
         <script src="scripts/controllers/periodos.js"></script>
         <script src="scripts/controllers/planestudios.js"></script>
+        <script src="scripts/controllers/planestudiosdetalle.js"></script>
         <script src="scripts/controllers/cursos.js"></script>
         <script src="scripts/controllers/pabellones.js"></script>
         <script src="scripts/controllers/aulas.js"></script>
