Avance Asignar Aulas

--- a/client/app/index.html
+++ b/client/app/index.html
@@ -30,7 +30,7 @@
 <!--div ui-view class="anim-in-out anim-fade" data-anim-speed="1000"></div-->
 <div ui-view layout="row" layout-fill></div>
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID -->
-     <script>
+     <!--script>
        !function(A,n,g,u,l,a,r){A.GoogleAnalyticsObject=l,A[l]=A[l]||function(){
        (A[l].q=A[l].q||[]).push(arguments)},A[l].l=+new Date,a=n.createElement(g),
        r=n.getElementsByTagName(g)[0],a.src=u,r.parentNode.insertBefore(a,r)
@@ -38,11 +38,11 @@
 
        ga('create', 'UA-XXXXX-X');
        ga('send', 'pageview');
-    </script>
+    </script-->
 
     <!-- build:js(.) scripts/vendor.js -->
     <!-- bower:js -->
-    <script src="scripts/vendors/jquery/dist/jquery.min.js"></script>
+    <script src="scripts/vendors/jquery.min.js"></script>
     <script src="public/js/vendors.js"></script>
     <script src="scripts/vendors/angular-loading-bar/build/loading-bar.js"></script>
     <!-- endbower -->
@@ -51,7 +51,7 @@
         <!-- build:js({.tmp,app}) scripts/scripts.js -->
         <script src="scripts/vendors/angular-loading-bar/build/loading-bar.js"></script>
         <script src="scripts/vendors/home-material.js"></script>
-        <script src="bower_components/moment/locale/es.js"></script>
+        <script src="scripts/vendors/es.js"></script>
         <script src="scripts/app.js"></script>
         <script src="scripts/directives/navscroll.js"></script>
         <script src="scripts/directives/validateunique.js"></script>
