--- a/client/app/index.html
+++ b/client/app/index.html
@@ -2,6 +2,7 @@
 <html class="no-js">
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <title></title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width">
@@ -30,7 +31,7 @@
 <!--div ui-view class="anim-in-out anim-fade" data-anim-speed="1000"></div-->
 <div ui-view layout="row" layout-fill></div>
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID -->
-     <script>
+     <!--script>
        !function(A,n,g,u,l,a,r){A.GoogleAnalyticsObject=l,A[l]=A[l]||function(){
        (A[l].q=A[l].q||[]).push(arguments)},A[l].l=+new Date,a=n.createElement(g),
        r=n.getElementsByTagName(g)[0],a.src=u,r.parentNode.insertBefore(a,r)
@@ -38,7 +39,7 @@
 
        ga('create', 'UA-XXXXX-X');
        ga('send', 'pageview');
-    </script>
+    </script-->
 
     <!-- build:js(.) scripts/vendor.js -->
     <!-- bower:js -->
