--- a/client/app/index.html
+++ b/client/app/index.html
@@ -54,6 +54,8 @@
         <script src="scripts/vendors/home-material.js"></script>
         <script src="scripts/vendors/es.js"></script>
         <script src="scripts/app.js"></script>
+        <script src="scripts/app-run.js"></script>
+        <script src="scripts/app-theme.js"></script>
         <script src="scripts/directives/navscroll.js"></script>
         <script src="scripts/directives/validateunique.js"></script>
         <script src="scripts/directives/menu_link.js"></script>
@@ -77,6 +79,9 @@
         <script src="scripts/controllers/aulas.js"></script>
         <script src="scripts/controllers/docentes.js"></script>
         <script src="scripts/controllers/asignaraulas.js"></script>
+
+        <script src="scripts/controllers/mic/asignaturas.js"></script>
+        <script src="scripts/controllers/mic/revisionplanestudios.js"></script>
         <!-- endbuild -->
 </body>
 </html>
