Registro de Silabus

--- a/client/app/index.html
+++ b/client/app/index.html
@@ -82,6 +82,8 @@
 
         <script src="scripts/controllers/mic/asignaturas.js"></script>
         <script src="scripts/controllers/mic/revisionplanestudios.js"></script>
+        <script src="scripts/controllers/mic/silabus.js"></script>
+        <script src="scripts/controllers/mic/silabusdetalle.js"></script>
         <!-- endbuild -->
 </body>
 </html>
