Cambios en Docente y Alumno

--- a/client/app/index.html
+++ b/client/app/index.html
@@ -79,6 +79,7 @@
         <script src="scripts/controllers/aulas.js"></script>
         <script src="scripts/controllers/docentes.js"></script>
         <script src="scripts/controllers/asignaraulas.js"></script>
+        <script src="scripts/controllers/alumnos.js"></script>
         <script src="scripts/controllers/mic/asignaturas.js"></script>
         <script src="scripts/controllers/mic/revisionplanestudios.js"></script>
         <script src="scripts/controllers/mic/silabus.js"></script>
