--- a/client/app/index.html
+++ b/client/app/index.html
@@ -84,6 +84,8 @@
         <script src="scripts/controllers/mic/revisionplanestudios.js"></script>
         <script src="scripts/controllers/mic/silabus.js"></script>
         <script src="scripts/controllers/mic/silabusdetalle.js"></script>
+        <script src="scripts/controllers/mic/sesionaprendizaje.js"></script>
+        <script src="scripts/controllers/mic/sesionaprendizajedetalle.js"></script>
         <!-- endbuild -->
 </body>
 </html>
