Refactoring: Se agrego bundle.js

--- a/client/app/index.html
+++ b/client/app/index.html
@@ -46,46 +46,10 @@
     <script src="scripts/vendors/jquery.min.js"></script>
     <script src="public/js/vendors.js"></script>
     <script src="scripts/vendors/angular-loading-bar/build/loading-bar.js"></script>
+    <script src="public/js/bundle-min.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
-        <!-- build:js({.tmp,app}) scripts/scripts.js -->
-        <script src="scripts/vendors/angular-loading-bar/build/loading-bar.js"></script>
-        <script src="scripts/vendors/home-material.js"></script>
-        <script src="scripts/vendors/es.js"></script>
-        <script src="scripts/app.js"></script>
-        <script src="scripts/app-run.js"></script>
-        <script src="scripts/app-theme.js"></script>
-        <script src="scripts/directives/navscroll.js"></script>
-        <script src="scripts/directives/validateunique.js"></script>
-        <script src="scripts/directives/menu_link.js"></script>
-        <script src="scripts/directives/menu_toggle.js"></script>
-        <script src="scripts/services/userfactory.js"></script>
-        <script src="scripts/services/authinterceptor.js"></script>
-        <script src="scripts/services/authtokenfactory.js"></script>
-        <script src="scripts/services/messages.js"></script>
-        <script src="scripts/services/toastMD.js"></script>
-        <script src="scripts/controllers/login.js"></script>
-        <script src="scripts/controllers/app.js"></script>
-        <script src="scripts/controllers/blocks/sidenav.js"></script>
-        <script src="scripts/controllers/login.js"></script>
-        <script src="scripts/controllers/facultades.js"></script>
-        <script src="scripts/controllers/escuelas.js"></script>
-        <script src="scripts/controllers/periodos.js"></script>
-        <script src="scripts/controllers/planestudios.js"></script>
-        <script src="scripts/controllers/planestudiosdetalle.js"></script>
-        <script src="scripts/controllers/cursos.js"></script>
-        <script src="scripts/controllers/pabellones.js"></script>
-        <script src="scripts/controllers/aulas.js"></script>
-        <script src="scripts/controllers/docentes.js"></script>
-        <script src="scripts/controllers/asignaraulas.js"></script>
-        <script src="scripts/controllers/alumnos.js"></script>
-        <script src="scripts/controllers/mic/asignaturas.js"></script>
-        <script src="scripts/controllers/mic/revisionplanestudios.js"></script>
-        <script src="scripts/controllers/mic/silabus.js"></script>
-        <script src="scripts/controllers/mic/silabusdetalle.js"></script>
-        <script src="scripts/controllers/mic/sesionaprendizaje.js"></script>
-        <script src="scripts/controllers/mic/sesionaprendizajedetalle.js"></script>
-        <!-- endbuild -->
+
 </body>
 </html>
