--- a/client/app/app.html
+++ b/client/app/app.html
@@ -52,7 +52,7 @@
     <!-- endbuild -->
 
     <!-- Smartsupp Live Chat script -->
-    <script type="text/javascript">
+    <!--script type="text/javascript">
     var _smartsupp = _smartsupp || {};
     _smartsupp.key = '09f5cd6e4cba2affbaaa539a3286df0aabdf5b85';
     window.smartsupp||(function(d) {
@@ -61,13 +61,8 @@
     	c.type='text/javascript';c.charset='utf-8';c.async=true;
     	c.src='//www.smartsuppchat.com/loader.js?';s.parentNode.insertBefore(c,s);
     })(document);
-    </script>
-<script src="http://cdn.jsdelivr.net/webshim/1.12.4/extras/modernizr-custom.js"></script>
-    <script src="//cdn.jsdelivr.net/webshim/1.14.5/polyfiller.js"></script>
-  <script>
-      webshims.setOptions('forms-ext', {types: 'date'});
-  webshims.polyfill('forms forms-ext');
-  </script>
+  </script-->
+
 
 </body>
 </html>
