--- a/client/app/app.html
+++ b/client/app/app.html
@@ -44,6 +44,8 @@
     <!-- build:js(.) scripts/vendor.js -->
     <!-- bower:js -->
     <script src="scripts/vendors/jquery.min.js"></script>
+     <script src="scripts/vendors/exporttoexcel.js"></script>
+
     <script src="public/js/vendors.js"></script>
     <script src="scripts/vendors/angular-loading-bar/build/loading-bar.js"></script>
     <!-- TODO Cargar bundle segun entorno-->
